--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,23 @@
     <div class="button-container">
         <ul>
             <li>
-                <button mat-raised-button (click)="getAccounts()">Accounts</button>
+                <button mat-raised-button (click)="this.getAccountInfo(4)">Account 4</button>                
+            </li>
+            <li>
+                <button mat-raised-button (click)="this.getAccounts()">Accounts</button>
+            </li>
+            <li>
+                <button mat-raised-button (click)="this.addAccount(this.newAccount)">New Account</button>
+            </li>
+            <li>
+                <mat-form-field class="example-full-width">
+                    <mat-label>ID</mat-label>
+                    <input matInput placeholder="ID" id="idInput" value="0">
+                </mat-form-field>
+                <button mat-raised-button (click)="this.editAccount(11, editedAccount)">Edit Account</button>
+            </li>
+            <li>
+                <button mat-raised-button (click)="this.deleteAccount(7)">Delete Account</button>
             </li>
         </ul>
     </div>
