AB: Created Login UI (Only HTML+CSS)

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,15 @@
 <div class="container">
+    <login></login>
+</div>
+
+
+
+
+
+
+
+
+ <!-- <div class="container">
     <div class="button-container">
         <ul>
             <li>
@@ -24,4 +35,5 @@
     <div class="output-container">
         <textarea id="output" rows="50" cols="100" [value]="this.output"></textarea>
     </div>
-</div>
+</div> -->
+
