--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,4 +1,4 @@
-.container {
+/* .container {
     display: grid;
     grid-template-columns: 15% 80%;
     height: 80%;
@@ -34,5 +34,17 @@ li {
 .example-full-width {
     min-width: 150px;
     max-width: 500px;
+    width: 100%;
+} */
+
+/* .container {
+    display: flex;
+    justify-content: center; 
+    align-items: center;    
+    height: 100vh;          
+} */
+
+.container {
+    height: 100%;
     width: 100%;
 }
