--- a/src/app/components/login-register/login/login.component.html
+++ b/src/app/components/login-register/login/login.component.html
@@ -13,12 +13,20 @@
             required
             />
             @if (email.invalid) {
-            <mat-error>{{errorMessage()}}</mat-error>
+                <mat-error>{{errorMessageEmail()}}</mat-error>
             }
     </mat-form-field>
     <mat-form-field appearance="outline">
         <mat-label>Enter your password</mat-label>
-        <input matInput [type]="hide() ? 'password' : 'text'" />
+        <input  matInput 
+                [type]="hide() ? 'password' : 'text'"
+                [formControl]="pw"
+                (blur)="updateErrorMessage()"
+                required
+                />
+                @if (pw.invalid) {
+                    <mat-error>{{errorMessagePW()}}</mat-error>
+                }
         <button
         mat-icon-button
         matSuffix
@@ -30,5 +38,9 @@
         </button>
     </mat-form-field>
     <span class="text-link" style="text-align: right;" (click)="this.forgotPasswordClick()">Forgot Password?</span>
-    <button mat-fab extended class="login-button" (click)="this.loginClick()">Login</button>
+    <button mat-fab 
+    extended 
+    class="login-button" 
+    (click)="this.loginClick()"
+    [disabled]="this.loginButtonDisabled">Login</button>
 </div>
