--- a/src/app/components/login-register/forgot-password/forgot-password.component.html
+++ b/src/app/components/login-register/forgot-password/forgot-password.component.html
@@ -1,1 +1,25 @@
-<p>forgot-password works!</p>
+<div class="container">
+    <div class="forgot-password-container">
+        <mat-icon class="back-button" (click)="this.backClick()">keyboard_arrow_left</mat-icon>
+        <span class="text-link" (click)="this.backClick()">Login</span>
+    </div>
+    <span class="text">Forgot Password</span>
+    <mat-form-field appearance="outline" class="input-email">
+        <mat-label>E-Mail</mat-label>
+        <input
+            matInput
+            placeholder="example@mail.com"
+            [formControl]="email"
+            (blur)="updateErrorMessage()"
+            required
+            />
+            @if (email.invalid) {
+                <mat-error>{{errorMessageEmail()}}</mat-error>
+            }
+    </mat-form-field>
+    <button mat-fab 
+            extended 
+            class="fotgot-password-button" 
+            (click)="this.forgotPasswordClick()"
+            [disabled]="this.forgetPasswordButtonDisabled">Reset Password</button>
+</div>
