--- a/src/app/components/login-register/reset-password/reset-password.component.html
+++ b/src/app/components/login-register/reset-password/reset-password.component.html
@@ -1,9 +1,9 @@
 <div class="container">
-    <div class="forgot-password-container">
+    <div class="reset-password-container">
         <mat-icon class="back-button" (click)="this.backClick()">keyboard_arrow_left</mat-icon>
         <span class="text-link" (click)="this.backClick()">Login</span>
     </div>
-    <span class="text">Forgot Password</span>
+    <span class="text">Reset Password</span>
     <mat-form-field appearance="outline" class="input-email">
         <mat-label>E-Mail</mat-label>
         <input
@@ -20,6 +20,6 @@
     <button mat-fab 
             extended 
             class="fotgot-password-button" 
-            (click)="this.forgotPasswordClick()"
+            (click)="this.resetPasswordClick()"
             [disabled]="this.forgetPasswordButtonDisabled">Reset Password</button>
 </div>
