Commit not working!!! Forgot password

--- a/src/app/components/login-register/forgot-password/forgot-password.component.html
+++ b/src/app/components/login-register/forgot-password/forgot-password.component.html
@@ -1,9 +1,9 @@
 <div class="container">
-    <div class="reset-password-container">
+    <div class="forgot-password-container">
         <mat-icon class="back-button" (click)="this.backClick()">keyboard_arrow_left</mat-icon>
         <span class="text-link" (click)="this.backClick()">Login</span>
     </div>
-    <span class="text">Reset Password</span>
+    <span class="text">Forgot Password</span>
     <mat-form-field appearance="outline" class="input-email">
         <mat-label>E-Mail</mat-label>
         <input
@@ -21,5 +21,7 @@
             extended 
             class="fotgot-password-button" 
             (click)="this.resetPasswordClick()"
-            [disabled]="this.forgetPasswordButtonDisabled">Reset Password</button>
+            [disabled]="this.forgetPasswordButtonDisabled">Send E-Mail</button>
+    <span class="text-link" *ngIf="gotEmailVisible" (click)="gotEmailClick()">I got the e-mail</span>
+    <span class="text-error" *ngIf="errorMessageResetPassword">{{errorMessageResetPassword}}</span>
 </div>
