--- a/src/app/components/login-register/forgot-password/forgot-password.component.css
+++ b/src/app/components/login-register/forgot-password/forgot-password.component.css
@@ -33,7 +33,7 @@
     justify-content: center;
 }
 
-.reset-password-container {
+.forgot-password-container {
     display: grid;
     grid-template-columns: min-content auto;
     padding-bottom: 1em;
@@ -68,4 +68,14 @@
     background-color: rgb(180, 180, 180); 
     color: rgb(255, 255, 255); 
     box-shadow: none;
+}
+
+.text-error {
+    font-family: "Montserrat", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 400;
+    font-style: normal;
+    font-size: 1em;
+    color: rgb(250, 50, 50);
+    user-select: none; 
 }
