--- a/src/app/components/login-register/login/login.component.html
+++ b/src/app/components/login-register/login/login.component.html
@@ -37,7 +37,7 @@
                 <mat-icon>{{hide() ? 'visibility_off' : 'visibility'}}</mat-icon>
         </button>
     </mat-form-field>
-    <span class="text-link" style="text-align: right;" (click)="resetPasswordClick()">Reset Password?</span>
+    <span class="text-link" style="text-align: right;" (click)="resetPasswordClick()">Forgot Password?</span>
     <button mat-fab 
             extended 
             class="login-button" 
